# FiltFilt

./: .gitignore  CMakeLists.txt  EigenUtil.h  FilFiltX.hpp  FiltFilt.cpp  FiltFilt.h  FilterX.hpp  SOFiltFilt.hpp  main.cpp
demo/: 10000_novel3.csv  20000_novel3.csv  293_novel3.csv  9100_novel3.csv  CMakeLists.txt  demo  demoFiltFilt  filtfilt.py  firwin  firwin.py  genCoeff.py  main.cpp  testdelim  testnodelim
include/: EigenUtil.h
